@@ -1,6 +1,8 @@
 DIST xfce4-weather-plugin-0.6.2.tar.bz2 555001 RMD160 d849b3e6dcc5b147bb9bd9b771dcc5d51da0e7e1 SHA1 dbe7e6695cd647aaf843dc790d9bb37ea95c83ea SHA256 279e78f2efa97baec74ade294143dbc1f3f4bb5e3f457724e9dbbeac1c269605
 DIST xfce4-weather-plugin-0.6.4.tar.bz2 671835 RMD160 98e80d83d25a34af59975b5a44c0e7d8761a637c SHA1 b5ba0de8f962ed4b225e1c5d5629e3a0a43a25d9 SHA256 f92880f82d5934061cf2ce2581f1bf51c4221a57fcde9fb5352959273b51e1cd
+DIST xfce4-weather-plugin-0.7.1.tar.bz2 666205 RMD160 708cea2adda832e6d8aadcfcac3f60538e23f6ea SHA1 f6e8d93905c61425f3b510daab65fb7cd8ecbdb8 SHA256 08835749cc4c865dc7d685c6b4829db1b96758121100558b6f9513da8b43c4bd
 EBUILD xfce4-weather-0.6.2.ebuild 431 RMD160 03b50b64db58e3f0fbbaf7af0410746a17d978e8 SHA1 087896c9ce647e8801c11ec2bf3e5a673e10096a SHA256 e321204cac47e4e8d85fe3599e3d2ee0c0b36657053f5922d552edc4830a4e32
 EBUILD xfce4-weather-0.6.4.ebuild 710 RMD160 b4e251e19b07d4565cc6106902b27dec5b841ad5 SHA1 7b8b6c0e97b5b2518c86f046dd3cbbecec77e4ab SHA256 2e26b4790da7efd5a249644fe805a9b21442aed9e9fa76d61a565ed954fd1a3d
-MISC ChangeLog 7196 RMD160 b686ab3845e45664d11d545a6b9856908b2b8e27 SHA1 f4747eaa128bf19aaacabddc5f5a457901f10f13 SHA256 f2f5a088a2a88e71e6fecae28f6bd7c455a037ce97f3afddb4932ad5fdece47a
+EBUILD xfce4-weather-0.7.1.ebuild 751 RMD160 91cc353c81843f552cfee3d031b5ff159b845d0c SHA1 40ebd561ced37dfc2715177679b784cce8c749d3 SHA256 db161bf42dcc7f9182304251d1935dff8009cbd6274ef457e7eed4baebf56175
+MISC ChangeLog 7331 RMD160 a92bd5125fad011f3580cd530c9b23775f4ffacc SHA1 6a9eb494b446a6a62d3a578711789299e47005ef SHA256 a5b04784adb8a57fe09684f89764d6aa9facb33fa3ea63fa59ddac57262fd03d
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
